Homepage, Register (pelamar & perusahaan) done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
         Kami berharap lembaga ini mampu memberikan manfaat yang besar bagi para jobseeker maupun employer.
     </string>
 
+    <string name="welcome">Selamat Datang di</string>
+    <string name="welcome1">Sumatera Career Center</string>
+    <string name="welcome2">Politeknik Caltex Riau</string>
+
 </resources>
